GSS NEWS -- History of user-visible changes.                    -*- outline -*-
Copyright (C) 2003-2012 Simon Josefsson
See the end for copying conditions.

* Version 1.0.3 (unreleased)

** i18n: Translations were updated.

** build: Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 1.0.2 (released 2011-11-25)

** gss/api.h: Added RFC 5587 const typedefs.
The new types are gss_const_buffer_t, gss_const_channel_bindings_t,
gss_const_ctx_id_t, gss_const_cred_id_t, gss_const_name_t,
gss_const_OID, and gss_const_OID_set.

** gss/api.h, gss/ext.h: Moved RFC 6339 functions from ext.h to api.h.
The functions gss_oid_equal, gss_encapsulate_token, and
gss_decapsulate_token are now standardized.  The types have changed
slightly to used RFC 5587 const types instead.  This does not affect
the ABI and doesn't modify any semantics: the functions did not modify
the non-const parameters before.

** i18n: Translations were updated.

** build: Update gnulib files.  Several QA bug fixes.

** API and ABI modifications.
gss_oid_equal:
gss_encapsulate_token:
gss_decapsulate_token: See above.

* Version 1.0.1 (released 2010-05-20)

** gss: New --list-mechanisms (-l) to list supported mechanisms in library.

** doc: Added section documenting command-line tool "gss".

** doc: Added PDF version of API reference manual.
See doc/reference/gss.pdf.

** i18n: Translations were updated.

** build: The check for GNU Shishi now requires 0.0.42 or later.
Earlier Shishi versions had bugs that caused the self-checks to fail.

** build: Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 1.0.0 (released 2010-03-30)

** Rarely used GNU GSS extensions removed.
The removed APIs are gss_copy_oid, gss_duplicate_oid, and
gss_encapsulate_token_prefix.

** Align capsulation functions with Heimdal and specification document.
The functions are gss_encapsulate_token and gss_decapsulate_token.