@@ -24,4 +24,5 @@ option "major" m "See gss.c for doc string" long no
 option "list-mechanisms" l "See gss.c for doc string" no
 option "accept-sec-context" a "See gss.c for doc string" no
 option "init-sec-context" i "See gss.c for doc string" string no
+option "server-name" n "See gss.c for doc string" string no
 option "quiet" q "Silent operation" flag off
