@@ -4,6 +4,10 @@ See the end for copying conditions.
 
 * Version 1.0.3 (unreleased)
 
+** gss: The command line tool can now initialize and accept security contexts.
+This is useful for debugging.  See the section "Invoking gss" in the
+manual for more information.
+
 ** i18n: Translations were updated.
 
 ** build: Update gnulib files.
